# oxidoc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  install.sh
.github/workflows/: release.yml  test.yml
docs/: configuration.md  security.md
oxidoc-cli/: Cargo.toml  build.rs
oxidoc-cli/assets/templates/: advanced.rdx  api-index.rdx  api-reference.rdx  deployment-github-pages.rdx  deployment-netlify.rdx  deployment-vercel.rdx  deployment.rdx  guides-animations.rdx  guides-internationalization.rdx  guides-styling.rdx  home.rdx  intro.rdx  lib-index.rdx  lib-library-example.rdx  lib-manual-api.rdx  openapi.yaml  oxidoc.toml.tmpl  quickstart.rdx
oxidoc-cli/src/: main.rs  model_cache.rs  server.rs
oxidoc-cli/tests/: cli.rs
oxidoc-components/: Cargo.toml
oxidoc-components/src/: accordion.rs  badge.rs  callout.rs  card_grid.rs  code_block.rs  lib.rs  steps.rs  tabs.rs  themed_image.rs
oxidoc-core/: Cargo.toml
oxidoc-core/benches/: build_bench.rs
oxidoc-core/src/: archive.rs  asset_hash.rs  assets.rs  breadcrumb.rs  build_result.rs  builder.rs  config.rs  config_social.rs  config_validate.rs  crawler.rs  css.rs  error.rs  feed.rs  host_redirects.rs  html_inject.rs  icons.rs  incremental.rs  island_props.rs  lib.rs  loader.rs  minify.rs  outputs.rs  page_extract.rs  renderer.rs  search_provider.rs  sitemap.rs  sri.rs  static_render.rs  static_render_landing.rs  suggest.rs  template.rs  template_404.rs  template_assets.rs  template_landing.rs  template_parts.rs  toc.rs  utils.rs  versioning.rs  wasm.rs  web_component.rs
oxidoc-core/src/builder/: folder_index.rs  mod.rs  root_pages.rs  site.rs
oxidoc-core/src/css/: components.rs  generator.rs  minify.rs  mod.rs  search.rs  syntax.rs  theme.rs
oxidoc-core/src/css/styles/: animations.css  api.css  breadcrumbs.css  components.css  content-toc.css  copy_markdown.css  header-actions.css  header.css  landing.css  layout.css  reset.css  responsive.css  search.css  sidebar.css  syntax.css  typography.css
oxidoc-core/src/i18n/: bundle.rs  loader.rs  locales.rs  mod.rs  state.rs
oxidoc-core/src/llm/: button.rs  config.rs  emit.rs  frontmatter.rs  mod.rs  resolve.rs
oxidoc-core/src/openapi/: html.rs  mod.rs  nav.rs  parser.rs  test_helpers.rs  types.rs
oxidoc-core/src/search_index/: extract.rs  lexical.rs  mod.rs  semantic.rs  types.rs
oxidoc-core/src/template/: meta.rs  mod.rs  nav.rs  page.rs  strings.rs
oxidoc-core/src/templates/: api_tabs.js  back_to_top.js  copy_button.js  copy_markdown.js  error_404.html  header_actions.html  header_scroll.js  mermaid_init.js  mobile_menu.js  scrollspy.js  search_dialog.html  search_dialog.js  theme_toggle.js
oxidoc-core/src/theme/: builtins.rs  css.rs  mod.rs  types.rs
oxidoc-core/tests/: archive.rs  fuzz.rs  snapshots.rs
oxidoc-island/: Cargo.toml
oxidoc-island/src/: focus_trap.rs  keyboard.rs  lib.rs  shadow.rs
oxidoc-openapi/: Cargo.toml
oxidoc-openapi/src/: auth.rs  codegen.rs  lib.rs  request.rs  response.rs
oxidoc-openapi/src/playground/: island.rs  mod.rs  types.rs  view.rs
oxidoc-openapi/src/styles/: controls.rs  layout.rs  mod.rs
oxidoc-print/: Cargo.toml
oxidoc-print/src/: config.rs  error.rs  fonts.rs  lib.rs  render_utils.rs  styles.rs
oxidoc-print/src/renderer/: blocks.rs  context.rs  inline.rs  mod.rs  table.rs
oxidoc-print/tests/: smoke.rs
oxidoc-registry/: Cargo.toml
oxidoc-registry/src/: hydration.rs  lib.rs  observer.rs
oxidoc-registry/tests/: browser.rs
oxidoc-search/: Cargo.toml
oxidoc-search/src/: engine.rs  error.rs  index.rs  island.rs  lexical.rs  lib.rs  semantic.rs  types.rs  wasm.rs
oxidoc-search/src/lexical/: matching.rs  mod.rs  resolve.rs  scoring.rs  search.rs
oxidoc-text/: Cargo.toml
oxidoc-text/src/: lib.rs
scripts/: install.ps1  install.sh
