[workspace]
resolver = "2"
members = [
    "oxidoc-cli",
    "oxidoc-core",
    "oxidoc-island",
    "oxidoc-components",
    "oxidoc-registry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/oxidoc/oxidoc"

[workspace.dependencies]
# Internal crates
oxidoc-core = { version = "0.1.0", path = "oxidoc-core" }
oxidoc-island = { version = "0.1.0", path = "oxidoc-island" }
oxidoc-components = { version = "0.1.0", path = "oxidoc-components" }
oxidoc-registry = { version = "0.1.0", path = "oxidoc-registry" }

# RDX (published crate references — local override via .cargo/config.toml)
rdx-parser = "0.1"
rdx-ast = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
serde-saphyr = "0.0.21"

# CLI
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }

# Web framework (dev server)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# OpenAPI
openapiv3 = "2"

# Wasm
leptos = "0.8"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "Document", "HtmlElement", "NodeList", "Window", "ShadowRoot", "ShadowRootInit", "ShadowRootMode", "CustomEvent", "CustomEventInit", "MutationObserver", "MutationObserverInit", "MutationRecord", "Navigator", "Clipboard", "Storage"] }
js-sys = "0.3"

# File watching (HMR)
notify = "8"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# CSS processing
lightningcss = "1.0.0-alpha.71"

# Error handling
thiserror = "2"
