[workspace]
resolver = "2"
members = [
    "oxidoc-cli",
    "oxidoc-core",
    "oxidoc-island",
    "oxidoc-components",
    "oxidoc-registry",
    "oxidoc-openapi",
    "oxidoc-search",
    "oxidoc-text",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "FSL-1.1-ALv2"
repository = "https://github.com/oxidoc-lab/oxidoc"

[workspace.dependencies]
# Internal crates
oxidoc-core = { version = "0.1", path = "oxidoc-core" }
oxidoc-island = { version = "0.1", path = "oxidoc-island" }
oxidoc-components = { version = "0.1", path = "oxidoc-components" }
oxidoc-registry = { version = "0.1", path = "oxidoc-registry" }
oxidoc-openapi = { version = "0.1", path = "oxidoc-openapi" }
oxidoc-search = { version = "0.1", path = "oxidoc-search" }
oxidoc-text = { version = "0.1", path = "oxidoc-text" }

# RDX (published crate references — local override via .cargo/config.toml)
rdx-parser = "0.1"
rdx-ast = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = "0.8"
toml = "1"
serde-saphyr = "0.0"

# CLI
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }

# Web framework (dev server)
axum = { version = "0.8", features = ["default"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = "0.3"
async-stream = "0.3"

# OpenAPI
openapiv3 = "2"

# Wasm
leptos = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Element",
    "Document",
    "HtmlElement",
    "NodeList",
    "Window",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomEvent",
    "CustomEventInit",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "Navigator",
    "Clipboard",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
js-sys = "0.3"

# File watching (HMR)
notify = "8"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# CSS processing
lightningcss = "1.0.0-alpha.71"

# Error handling
thiserror = "2"

# Parallelization
rayon = "1"

# Hashing
sha2 = "0.10"

# Base64 encoding
base64 = "0.22"

# Time/Date handling
chrono = { version = "0.4", features = ["serde"] }

# Benchmarking
fluxbench = "0.1"

# Testing
wasm-bindgen-test = "0.3"

# Search indexing
splintr = "0.9"
boostr = "0.1"
numr = "0.5"

# Internationalization (i18n)
fluent = "0.16"
unic-langid = "0.9"
intl-memoizer = "0.5"

# Static initialization
lazy_static = "1.4"

# Syntax highlighting
oxidoc-highlight = "0.1"
