[package]
name = "oxidoc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Oxidoc documentation engine CLI — oxidoc dev & oxidoc build"

[[bin]]
name = "oxidoc"
path = "src/main.rs"

[dependencies]
oxidoc-core.workspace = true
clap.workspace = true
miette.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
async-stream.workspace = true

[dev-dependencies]
tempfile = "3"
