[package]
name = "oxidoc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Oxidoc documentation engine CLI — oxidoc dev & oxidoc build"
include = [
    "src/**/*",
    "build.rs",
    "assets/logo.svg",
    "assets/templates/**/*",
    "assets/wasm/*.js",
    "assets/wasm/*.wasm",
    "README.md",
    "LICENSE*",
]

[[bin]]
name = "oxidoc"
path = "src/main.rs"

[dependencies]
oxidoc-core.workspace = true
oxidoc-print.workspace = true
rdx-parser.workspace = true
rdx-ast.workspace = true
rdx-transform.workspace = true
clap.workspace = true
miette.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
async-stream.workspace = true
sha2.workspace = true
thiserror.workspace = true
dirs = "6"
ureq = { version = "3", features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
