[package]
name = "oxidoc-components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in Oxidoc island components — Callout, Tabs, CodeBlock, ApiPlayground, SemanticSearch"

[dependencies]
oxidoc-island.workspace = true
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
