[package]
name = "oxidoc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Oxidoc build engine — config, RDX parsing, and static HTML generation"

[dependencies]
rdx-parser.workspace = true
rdx-ast.workspace = true
oxidoc-island.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
openapiv3.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde-saphyr.workspace = true
lightningcss.workspace = true
rayon.workspace = true
sha2.workspace = true
chrono.workspace = true
base64.workspace = true
fluent.workspace = true
unic-langid.workspace = true
intl-memoizer.workspace = true
lazy_static.workspace = true
oxidoc-highlight.workspace = true
boostr.workspace = true
numr.workspace = true
oxidoc-text.workspace = true
rkyv.workspace = true

[dev-dependencies]
tempfile = "3"
fluxbench = { workspace = true }

[[bench]]
name = "build_bench"
harness = false
