[package]
name = "oxidoc-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive API playground island for Oxidoc documentation sites"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxidoc-island.workspace = true
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
js-sys.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
