[package]
name = "oxidoc-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Oxidoc frontend Wasm entry point — scans DOM for <oxidoc-island> tags and hydrates components"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxidoc-island.workspace = true
oxidoc-components.workspace = true
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true
