[package]
name = "oxidoc-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Search engine island for Oxidoc — semantic + lexical search in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxidoc-island.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true
thiserror.workspace = true
oxidoc-text.workspace = true
rkyv.workspace = true

# ML-Rust ecosystem for semantic search
boostr.workspace = true
numr.workspace = true
splintr.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
